--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
     "react": "^19.2.0",
+    "react-awesome-reveal": "^4.3.1",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
